--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/Users/carminerainone/Desktop/mod-5/work-Schedule/assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,10 +30,109 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-    </div>
+
+      <div id = "9am" class = "row time-block">
+        <div class = "hour col-md-1">
+        9am
+      </div>
+      <textarea class = "col-md-10">
+      </textarea> 
+      <button class = " saveBtn col-md-1"> 
+      </button>
+      </div>
+
+      <div id = "10am" class = "row time-block">
+        <div class = " hour col-md-1"> 
+          10am
+        </div>
+        <textarea class = "col-md-10">
+        </textarea>
+        <button class = " saveBtn col-md-1">
+        </button> 
+        </div>
+
+
+        <div id = "11am" class = "row time-block">
+          <div class = " hour col-md-1"> 
+            11am
+          </div>
+          <textarea class = "col-md-10">
+          </textarea>
+          <button class = " saveBtn col-md-1">
+          </button> 
+          </div>
+
+          <div id = "12pm" class = "row time-block">
+            <div class = " hour col-md-1"> 
+              12pm
+            </div>
+            <textarea class = "col-md-10">
+            </textarea>
+            <button class = "saveBtn col-md-1">
+            </button> 
+            </div>
+
+
+            <div id = "1pm" class = "row time-block">
+              <div class = " hour col-md-1"> 
+                1pm
+              </div>
+              <textarea class = "col-md-10">
+              </textarea>
+              <button class = " saveBtn col-md-1">
+              </button> 
+              </div>
+
+
+              <div id = "2pm" class = "row time-block">
+                <div class = " hour col-md-1"> 
+                  2pm
+                </div>
+                <textarea class = "col-md-10">
+                </textarea>
+                <button class = "saveBtn col-md-1">
+                </button> 
+                </div>
+
+
+                <div id = "3pm" class = "row">
+                  <div class = " hour col-md-1"> 
+                    3pm
+                  </div>
+                  <textarea class = "col-md-10">
+                  </textarea>
+                  <button class = "saveBtn col-md-1">
+                  </button> 
+                  </div>
+
+
+                  <div id = "4pm" class = "row time-block">
+                    <div class = " hour col-md-1"> 
+                      4pm
+                    </div>
+                    <textarea class = "col-md-10">
+                    </textarea>
+                    <button class = "saveBtn col-md-1">
+                    </button> 
+                    </div>
+
+                <div id = "5pm" class = "row time-block">
+                   <div class = " hour  col-md-1"> 
+                    5pm
+                  </div>
+               <textarea class = "col-md-10">
+                 </textarea>
+               <button class = "saveBtn col-md-1">
+               </button> 
+              </div>
+
+
+        
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src = "/Users/carminerainone/Desktop/mod-5/work-Schedule/assets/js/script.js"></script> 
+
   </body>
 </html>
 © 2022 GitHub, Inc.
