--- a/index.html
+++ b/index.html
@@ -31,96 +31,96 @@
     <div class="container">
       <!-- Timeblocks go here -->
 
-      <div id = "9am" class = "row time-block">
+      <div id = "9" class = "row time-block">
         <div class = "hour col-md-1">
         9am
       </div>
-      <textarea class = "col-md-10">
+      <textarea class = "description col-md-10">
       </textarea> 
       <button class = " saveBtn col-md-1"> 
       </button>
       </div>
 
-      <div id = "10am" class = "row time-block">
+      <div id = "10" class = "row time-block">
         <div class = " hour col-md-1"> 
           10am
         </div>
-        <textarea class = "col-md-10">
+        <textarea class = "description col-md-10">
         </textarea>
         <button class = " saveBtn col-md-1">
         </button> 
         </div>
 
 
-        <div id = "11am" class = "row time-block">
+        <div id = "11" class = "row time-block">
           <div class = " hour col-md-1"> 
             11am
           </div>
-          <textarea class = "col-md-10">
+          <textarea class = "description col-md-10">
           </textarea>
           <button class = " saveBtn col-md-1">
           </button> 
           </div>
 
-          <div id = "12pm" class = "row time-block">
+          <div id = "12" class = "row time-block">
             <div class = " hour col-md-1"> 
               12pm
             </div>
-            <textarea class = "col-md-10">
+            <textarea class = "description col-md-10">
             </textarea>
             <button class = "saveBtn col-md-1">
             </button> 
             </div>
 
 
-            <div id = "1pm" class = "row time-block">
+            <div id = "1" class = "row time-block">
               <div class = " hour col-md-1"> 
                 1pm
               </div>
-              <textarea class = "col-md-10">
+              <textarea class = "description col-md-10">
               </textarea>
               <button class = " saveBtn col-md-1">
               </button> 
               </div>
 
 
-              <div id = "2pm" class = "row time-block">
+              <div id = "2" class = "row time-block">
                 <div class = " hour col-md-1"> 
                   2pm
                 </div>
-                <textarea class = "col-md-10">
+                <textarea class = "description col-md-10">
                 </textarea>
                 <button class = "saveBtn col-md-1">
                 </button> 
                 </div>
 
 
-                <div id = "3pm" class = "row">
+                <div id = "3" class = "row time-block">
                   <div class = " hour col-md-1"> 
                     3pm
                   </div>
-                  <textarea class = "col-md-10">
+                  <textarea class = "description col-md-10">
                   </textarea>
                   <button class = "saveBtn col-md-1">
                   </button> 
                   </div>
 
 
-                  <div id = "4pm" class = "row time-block">
+                  <div id = "4" class = "row time-block">
                     <div class = " hour col-md-1"> 
                       4pm
                     </div>
-                    <textarea class = "col-md-10">
+                    <textarea class = "description col-md-10">
                     </textarea>
                     <button class = "saveBtn col-md-1">
                     </button> 
                     </div>
 
-                <div id = "5pm" class = "row time-block">
+                <div id = "5" class = "row time-block">
                    <div class = " hour  col-md-1"> 
                     5pm
                   </div>
-               <textarea class = "col-md-10">
+               <textarea class = "description col-md-10">
                  </textarea>
                <button class = "saveBtn col-md-1">
                </button> 
